2009-09-08  Philipp K. Janert  <janert@ieee.org>

	* src/specfun.c: Fixing the static function declarations for the
	Airy function.
	
2009-09-06  Ethan A Merritt  <merritt@u.washington.edu>

	* src/win/wgraph.c (drawgraph): Make sure to update current position
	after drawing a polyline.
	Bug #2213362

	* src/graphics.c (boundary): If there is no colorbox, don't try to 
	assign tick positions for it.
	Bug #2822482

	* term/gd.trm: Re-order initialization of background color, correct
	compilation warnings if using libgd 2.0.36

2009-09-05  Philipp K. Janert  <janert@ieee.org>

        * src/specfun.c src/specfun.h src/eval.c docs/gnuplot.doc:  Adding
        support for the Airy function Ai(x) as gnuplot function airy(x).
	
2009-09-03  Alexander Täschner  <taschna@users.sourceforge.net>

	* src/datafile.c (df_generate_pseudodata):  Fix off-by-one error in
	generating the number of points corresponding to samples.

2009-09-02  Benjamin Lindner  <lindnerb@users.sourceforge.net> 

	* docs/gnuplot.doc docs/plotstyles.gnu demo/histerror.dat:
	Add a figure to the pdf documentation showing histogram with errorbars.

2009-09-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_tic_prop):  When xtics (e.g.) were unset, then a new
	command 'set xtics ...' could lose track of the tic properties being set.
	Bug #2848433

2009-08-31  Benjamin Lindner  <lindnerb@users.sourceforge.net> 

	* src/win/wpause.c src/wxterminal/gp_cairo.c:  Fix ambiguous syntax and
	bad format statement that generates compiler warnings.

2009-08-30  Tatsuro Matsuoka <tmacchant3@yahoo.co.jp>

	* config/makeile.mgw:  The cairo terminals need gp_cairo_helpers also.

2009-08-28  Benjamin Lindner  <lindnerb@users.sourceforge.net> 

	* config/makefile.mgw:  Separate configuration flag CAIROTERMS for
	inclusion of pngcairo and pdfcairo terminals. 
	EAM - Share a CAIROLIBS flag for use by both WXT and CAIROTERMS.

2009-08-28  jpsa <john-aldridge@users.sourceforge.net>
